/cp 2013-11-06  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/11006
	* init.c (build_new_1): Don't call build_java_class_ref on non-class
	types.

/testsuite
2013-11-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/11006
	* g++.dg/other/java3.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@204469 138bc75d-0d04-0410-961f-82ee72b054a4